2006-05-11  Ulrich Drepper  <drepper@redhat.com>

	* sem_open.c (__sem_mappings_lock): Mark as hidden.
	* semaphoreP.h (__sem_mappings_lock): Likewise.

2006-05-10  Ulrich Drepper  <drepper@redhat.com>

	* pthread_atfork.c: Mark __dso_handle as hidden.

2006-05-09  Ulrich Drepper  <drepper@redhat.com>

	[BZ #2644]
	* sysdeps/pthread/unwind-forcedunwind.c: Different solution for
	the reload problem.  Change the one path in pthread_cancel_init
	which causes the problem.  Force gcc to reload.  Simplify callers.
	* sysdeps/unix/sysv/linux/ia64/unwind-forcedunwind.c
	(_Unwind_GetBSP): Undo last patch.

2006-05-07  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/ia64/unwind-forcedunwind.c: Make sure the
	function pointer is reloaded after pthread_cancel_init calls.

	[BZ #2644]
	* sysdeps/pthread/unwind-forcedunwind.c: Make sure functions
	pointers are reloaded after pthread_cancel_init calls.

2006-05-01  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/pthread/allocalim.h (__libc_use_alloca): Mark with
	__always_inline.

2006-04-27  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/timer_routines.c (timer_helper_thread):
	Allocate new object which is passed to timer_sigev_thread so that
	the timer can be deleted before the new thread is scheduled.

2006-04-26  Roland McGrath  <roland@redhat.com>

	* sysdeps/x86_64/tls.h: Include <asm/prctl.h> inside [! __ASSEMBLER__].

2006-04-08  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/lowlevellock.h: Remove branch predicion
	suffix for conditional jumps.
	* sysdeps/unix/sysv/linux/i386/i486/sem_trywait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/lowlevellock.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/libc-lowlevellock.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/pthread_barrier_wait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/sem_timedwait.S: Likewise.
	* sysdeps/unix/sysv/linux/i386/i486/sem_wait.S: Likewise.
